--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/react-fontawesome": "0.0.17",
     "axios": "^0.18.0",
-    "fontawesome": "^4.7.2",
+    "bootstrap": "^3.3.7",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
-    "react-fontawesome": "^1.6.1"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
